# benchmarks_eusipco2023

./: README.md  config_benchmarks.yaml  pyproject.toml  run_this_benchmark.py  run_this_benchmark_component_denoising.py  run_this_benchmark_denoising.py  run_this_benchmark_inst_frequency.py
new_method_example/: method_new_basic_template.py  method_new_basic_template_matlab.py  method_new_with_parameters.py
notebooks/: demo_benchmark.ipynb  demo_cross_chirps_IF.ipynb  demo_method_DT.ipynb  demo_method_EM.ipynb  demo_method_EM_method.ipynb  demo_method_FRI.ipynb  demo_method_FRI_method.ipynb  demo_method_MB_RD.ipynb  demo_method_PB.ipynb  demo_method_brevdo.ipynb  demo_method_delaunay_triangulation.ipynb  demo_method_nils_method.ipynb  demo_method_pseudo_bayesian.ipynb  demo_method_sliding_ssa.ipynb  demo_method_ssa_denoising.ipynb  demo_signal_bank.ipynb  display_results.ipynb  figures_bat_signal_IF.ipynb  get_mat_from_signals.ipynb  readme.md
notebooks/bat_signal/: batsig_source.txt  demo_bat_signal.m  figures_bat_signal_masks.ipynb  mask_EM.mat  mask_PB.mat
notebooks/signals_mat/: CosChirp.mat  ExpChirp.mat  HermiteElipse.mat  HermiteFunction.mat  LinearChirp.mat  McCosPlusTone.mat  McCrossingChirps.mat  McCrossingChirps2.mat  McDoubleCosChirp.mat  McDumpedCos.mat  McExpChirps.mat  McHarmonic.mat  McImpulses.mat  McMultiCos.mat  McMultiCos2.mat  McMultiLinear.mat  McMultiLinear2.mat  McOnOff2.mat  McOnOffTones.mat  McParallelChirps.mat  McParallelChirpsUnbalanced.mat  McPureTones.mat  McSyntheticMixture.mat  McSyntheticMixture2.mat  McSyntheticMixture3.mat  McSyntheticMixture4.mat  McSyntheticMixture5.mat  McTripleImpulse.mat  ToneDumped.mat  ToneSharpAttack.mat
results/: component_denoising_results.csv  denoising_results.csv  instantaneous_frequency_results.csv  last_benchmark_component_denoising.pkl  last_benchmark_denoising.pkl  last_benchmark_inst_frequency.pkl
src/benchmark_demo/: Benchmark.py  ResultsInterpreter.py  SignalBank.py  benchmark_utils.py  perf_metrics.py  spatstats_utils_old.py  utilstf.py
src/methods/: config_tasks.yaml  method_EM.py  method_FRI.py  method_MB_RD.py  method_PB.py  method_brevdo.py  method_delaunay_triangulation.py  method_nils.py  method_pseudo_bayesian.py  not_method_EM.py  not_method_sliding_ssa.py  not_method_ssa_denoising.py
src/methods/DT_method_utils/: comp_time.ipynb
src/methods/EM_method_utils/: EM_gridsearch.m  MAIN_multi.m  Mod_Estim_W_EM_multi.m  Mod_NR_multi.m  comp_Fc.m  comp_time.m  compute_P_Lap_2n.m  compute_P_Reg2_2n.m  compute_pprior_LapMu.m  compute_pprior_TVMu.m  denSampling.m  em_method.m  mwe_EM_method.m  poly_int.m  tfrgab2.m
src/methods/EM_new/: EM_estim_multi.m  EM_gridsearch.m  Fh.m  Fig_bat.m  MAIN.m  MAIN_multi.m  (+24 more)
(+173 files in other folders)
