[tool.poetry]
name = "benchmark-demo"
# package-mode = false
version = "0.1.0"
description = "Benchmarks for testing MCS analysis methods."
authors = ["Juan M. Miramont <jmiramont@univ-nantes.fr>"]
packages = [{include = "src"}]

# [virtualenvs]
# # Create local virtualenv stored in .venv (Python version used depends on VSCode selected interpreter)
# # https://python-poetry.org/docs/configuration/#virtualenvsin-project
# # poetry config virtualenvs.create true --local
# # poetry config virtualenvs.in-project true --local
# create = true
# in-project = true

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.0"
matplotlib = "^3.5.1"
pandas = "^1.4.4"
scipy = "^1.7.3"
seaborn = "^0.12.0"
cmocean = "^4.0.3"
pytest = "^7.0.1"
tabulate = "^0.8.9"
PyYAML = "^6.0"
typeguard = "^2.13.3"
mcsm-benchs = {git = "https://github.com/jmiramont/mcsm-benchs.git", branch = "dev"}


# ipykernel = {version = "^6.6.1", optional = true}
# matlabengine = "9.12.17"
# Sphinx = {version = "^4.5.0", optional = true}
# sphinx-rtd-theme = {version = "^1.0.0", optional = true}
# rpy2 = { version = "^3.5.4", optional = true }
# spatstat-interface = { version = "^0.1.2", optional = true }
# nbformat = { version = "^5.7.1", optional = true }
# ipympl = { version = "^0.9.2", optional = true }



# Install R-based tools with "poetry install --with rtools"
[tool.poetry.group.rtools]
optional = true

[tool.poetry.group.rtools.dependencies]
rpy2 = "^3.5.4"
spatstat-interface = "^1.0.1"

# Install Matlab-based tools with "poetry install --with matlab_tools"
[tool.poetry.group.matlab_tools]
optional = true

[tool.poetry.group.matlab_tools.dependencies]
matlabengine = "24.1.2" #"9.13.6"

# Install Notebooks dependencies "poetry install --with notebooks"
[tool.poetry.group.notebooks]
optional = true

[tool.poetry.group.notebooks.dependencies]
ipykernel = "^6.25.2"
# librosa = "^0.9.2"

# Jupyter notebooks to be edited in VSCode
# notebooks = ["ipykernel","ipyml","nbformat"]
# docs = ["Sphinx", "sphinx-rtd-theme"]
# rtools = ["rpy2", "spatstat-interface"]
# matlab_tools = ["matlabengine"]

# Documentation is generated with Sphinx
# https://www.sphinx-doc.org/en/master/index.html
# - locally with poetry run sphinx-build -b docs docs/_build/html
# - online either with
#     - ReadTheDocs see .readthedocs.yaml file
#     - GitHub pages see .github/workflows/docs.yml
# docs = ["Sphinx", "sphinxcontrib-bibtex", "rstcheck"]

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
